--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -59,6 +59,13 @@ a {
   background-color: #159957;
   background-image: linear-gradient(120deg, #155799, #159957); }
 
+.page-header input {
+    color:#1e6bb8;
+    border-color: rgba(255, 255, 255, 0.2);
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 0.3rem; }
+
 @media screen and (min-width: 64em) {
   .page-header {
     padding: 5rem 6rem; } }
